--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@fontsource/inter": "^5.2.8",
     "@fontsource/playfair-display": "^5.2.8",
     "devicon": "^2.17.0",
+    "mongoose": "^9.2.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.13.1",
     "react-svg-blob": "^0.3.1"
   },
   "devDependencies": {
