--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/montserrat": "^5.2.8",
     "@fontsource/playfair-display": "^5.2.8",
     "devicon": "^2.17.0",
+    "gsap": "^3.14.2",
     "mongoose": "^9.2.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
